--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
 
 
- <h3><font size="6"  color="red">Add experiment (review): Comparison with ByteSing (FastSpeech Based SVS)</font></h3>
+ <h3><font size="6"  color="red">Added experiment (for review): Comparison with ByteSing (FastSpeech Based SVS)</font></h3>
 				<p><b>
 			Note:   Singing-Tacotron can automatically learn alignment information through the proposed attention mechanism, which avoids fine annotation of data.
             While it is necessary for ByteSing (FastSpeech-Based) system to label the duration information of each phoneme on the training corpus, which is time-consuming and easy to produce errors.</b></p>			 
@@ -214,7 +214,7 @@
                           </td>						       
 						</tr>		
 
-		
+                       
                       </tbody>
                     </table>
                   </div>				 
