--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 			<p>
 			The most important advantage of the "Singing-Tacotron" is that it does not need the alignment information between musicscore and singing voice. It only needs music score information and singing voice for end-to-end training.			
 			</p>
+			
+			<p>
+			Arxiv: <a href="https://arxiv.org/abs/2202.07907" title="https://arxiv.org/abs/2202.07907">
+			</p>
+			
 			<p>
 			 </div>
              
@@ -711,6 +716,10 @@
           <br>
           <a class="text-light"><strong>Tao Wang</strong></a> |
           tao.wang@nlpr.ia.ac.cn
+          <br>
+          <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+          <span id="busuanzi_container_site_pv">Total number of visits: <span id="busuanzi_value_site_pv"></span> </span>
+
         </small>
       </p>
     </div>
