--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</p>
 			
 			<p>
-			Arxiv: <a href="https://arxiv.org/abs/2202.07907" title="https://arxiv.org/abs/2202.07907">
+			Arxiv: <a href="https://arxiv.org/abs/2202.07907" title="https://arxiv.org/abs/2202.07907"> https://arxiv.org/abs/2202.07907 </a>
 			</p>
 			
 			<p>
