--- a/index.html
+++ b/index.html
@@ -716,7 +716,12 @@
           <br>
           <a class="text-light"><strong>Tao Wang</strong></a> |
           tao.wang@nlpr.ia.ac.cn
-
+		  <br>
+		  		  	  	   <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+						   
+			<span id="busuanzi_container_page_pv">
+            Total number of visits: <span id="busuanzi_value_page_pv"></span>
+		    </span>		
         </small>
       </p>
     </div>
